--- a/Bert.ipynb
+++ b/Bert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "id": "12d70bd7",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import torch\n",
     "from torch import nn\n",
     "import torch.nn.functional as F\n",
-    "import math"
+    "import math\n",
+    "from ipynb.fs.full.OntologyEmbedding import FuseEmbeddings"
    ]
   },
   {
@@ -36,13 +37,14 @@
     "$$ varience_i = {1 \\over K}{\\sum_{k=1}^{K} (x_{i,k}-\\mu_i)^2}$$\n",
     "\n",
     "<br/> \n",
-    "refs: \n",
+    "reference: \n",
+    "<br/> \n",
     "1. https://arxiv.org/pdf/1607.06450.pdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "e2aa888f",
    "metadata": {},
    "outputs": [],
@@ -76,13 +78,14 @@
     "2. the Position-wise Fully Connected Feed-Forward Network Layer\n",
     "\n",
     "<br/>\n",
-    "refs: \n",
+    "reference:\n",
+    "<br/>\n",
     "1. http://nlp.seas.harvard.edu/annotated-transformer/  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f03cd5af",
    "metadata": {},
    "outputs": [],
@@ -105,13 +108,13 @@
     "**Scaled-Dot Product Attention**: an attention mechanism where the dot products are scaled down by $\\sqrt{d_k}$ where $d_k$ is the dimension of Q and K.\n",
     "\n",
     "$$ Attention(Q,K,V) = softmax({{QK^T} \\over {\\sqrt{d_k}}})V $$\n",
-    "refs: \n",
+    "reference: \n",
     "1. https://arxiv.org/pdf/1706.03762.pdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "id": "559c6c36",
    "metadata": {},
    "outputs": [],
@@ -121,7 +124,7 @@
     "        d_k = query.shape[0]\n",
     "        numerator = torch.matmul(query, torch.transpose(key, -2, -1))\n",
     "        scaled = numerator / (d_k**0.5)\n",
-    "        \n",
+    "\n",
     "        if mask is not None:\n",
     "            scaled = scaled.masked_fill(mask == 0, -1e9)\n",
     "        \n",
@@ -141,33 +144,33 @@
    "id": "3e28de5d",
    "metadata": {},
    "source": [
-    "**Multi-Head Attention**: \n",
+    "**Multi-Head Attention**: GBERT specifies 4 attention heads\n",
     "<br/> \n",
     "$$ MultiHead(Q,K,V) = Concat(head_1,..., head_h)W^O $$\n",
     "where\n",
     "$$ head_i = Attention(Q{W_i}^Q, K{W_i}^K, V{W_i}^V) $$\n",
     "\n",
-    "refs: \n",
+    "reference: \n",
     "1. https://arxiv.org/pdf/1706.03762.pdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 14,
    "id": "2853f9dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "class MultiHeadedAttention(nn.Module):\n",
-    "    def __init__(self, hidden_size, num_heads, dropout_prob):\n",
+    "    def __init__(self, hidden_size, dropout_prob):\n",
     "        super().__init__()\n",
-    "        assert hidden_size % num_heads == 0\n",
+    "        assert hidden_size % 4 == 0\n",
     "\n",
-    "        self.d_k = hidden_size // num_heads\n",
-    "        self.h = num_heads\n",
+    "        self.d_k = hidden_size // 4\n",
+    "        self.h = 4\n",
     "\n",
     "        linear_layers = []\n",
-    "        for i in range(num_heads):\n",
+    "        for i in range(3):\n",
     "            linear_layers.append(nn.Linear(hidden_size, hidden_size, bias=False))\n",
     "            \n",
     "        self.linear_layers = nn.ModuleList(linear_layers)\n",
@@ -178,21 +181,11 @@
     "\n",
     "    def forward(self, query, key, value, mask=None):\n",
     "        batch_size = query.size(0)\n",
-    "\n",
-    "        Q_new = torch.zeros_like(query)\n",
-    "        K_new = torch.zeros_like(key)\n",
-    "        V_new = torch.zeros_like(value)\n",
     "        \n",
-    "        for i in range(batch_size):\n",
-    "            Q_new[i] = self.linear_layers[i](query[i])\n",
-    "            K_new[i] = self.linear_layers[i](key[i])\n",
-    "            V_new[i] = self.linear_layers[i](value[i])\n",
-    "            \n",
-    "        Q_new = Q_new.view(batch_size, -1, self.h, self.d_k).transpose(1, 2)\n",
-    "        K_new = K_new.view(batch_size, -1, self.h, self.d_k).transpose(1, 2)\n",
-    "        V_new = V_new.view(batch_size, -1, self.h, self.d_k).transpose(1, 2)\n",
+    "        query, key, value = [l(x).view(batch_size, -1, self.h, self.d_k).transpose(1, 2)\n",
+    "                             for l, x in zip(self.linear_layers, (query, key, value))]\n",
     "        \n",
-    "        x, attn = self.attention(Q_new, K_new, V_new, mask=mask, dropout=self.dropout)\n",
+    "        x, attn = self.attention(query, key, value, mask=mask, dropout=self.dropout)\n",
     "\n",
     "        x = x.transpose(1, 2).contiguous().view(batch_size, -1, self.h * self.d_k)\n",
     "\n",
@@ -209,7 +202,7 @@
     "<br/>\n",
     "In the paper Attention is All You Need, ReLU is used as the activation but in the G-BERT github page the guasssian error linear unit (GeLU) is used as the activation step. This is approximated as \n",
     "$$ GeLU(x) = 0.5x(1+tanh[\\sqrt{2/\\pi}(x+0.044715x^3)]) $$\n",
-    "refs: \n",
+    "references: \n",
     "1. https://arxiv.org/pdf/1606.08415.pdf  \n",
     "2. https://arxiv.org/pdf/1706.03762.pdf\n",
     "3. http://nlp.seas.harvard.edu/annotated-transformer/"
@@ -217,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 72,
    "id": "1013150c",
    "metadata": {},
    "outputs": [],
@@ -230,8 +223,9 @@
     "        self.dropout = nn.Dropout(dropout_prob)\n",
     "\n",
     "    def forward(self, x):\n",
+    "        x = self.w_1(x)\n",
     "        gelu_result = 0.5 * x * (1 + torch.tanh(math.sqrt(2 / math.pi) * (x + 0.044715 * torch.pow(x, 3))))\n",
-    "        return self.w_2(self.dropout(gelu(self.w_1(x))))"
+    "        return self.w_2(self.dropout(gelu_result))"
    ]
   },
   {
@@ -241,22 +235,22 @@
    "source": [
     "**Transformer Block**: this acts as the encoder and uses the two layers, multi-head attention and FNN, to encode the input. \n",
     "\n",
-    "refs:\n",
+    "reference:\n",
     "1. http://nlp.seas.harvard.edu/annotated-transformer/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 73,
    "id": "b2036524",
    "metadata": {},
    "outputs": [],
    "source": [
     "class TransformerBlock(nn.Module):\n",
     "\n",
-    "    def __init__(self, hidden_size, num_heads, intermediate_size, dropout_prob):\n",
+    "    def __init__(self, hidden_size, intermediate_size, dropout_prob):\n",
     "        super().__init__()\n",
-    "        self.attention = MultiHeadedAttention(hidden_size, num_heads, dropout_prob)\n",
+    "        self.attention = MultiHeadedAttention(hidden_size, dropout_prob)\n",
     "        self.feed_forward = PositionwiseFeedForward(hidden_size, intermediate_size, dropout_prob)\n",
     "        self.input_sublayer = SublayerConnection(hidden_size, dropout_prob)\n",
     "        self.output_sublayer = SublayerConnection(hidden_size, dropout_prob)\n",
@@ -275,17 +269,17 @@
    "id": "60505d52",
    "metadata": {},
    "source": [
-    "**Bert Embeddings**: BERT embeddings usually include word embeddings, token embeddings, and position emmbeddings, G-BERT does not include position embeddings because we are using medical codes as our input which do not have a specific order within a given visit\n",
+    "**Bert Embeddings**: BERT embeddings usually include word embeddings, token embeddings, and position emmbeddings, G-BERT does not include position embeddings because we are using medical codes as our input which do not have a specific order within a given visit.\n",
     "<br/>\n",
     "<br/>\n",
-    "refs:\n",
+    "references:\n",
     "1. https://www.ijcai.org/proceedings/2019/0825.pdf\n",
     "2. https://arxiv.org/pdf/1810.04805.pdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "bd038e8b",
    "metadata": {},
    "outputs": [],
@@ -298,7 +292,7 @@
     "        self.token_embeddings = nn.Embedding(2, hidden_size)\n",
     "\n",
     "        self.LayerNorm = LayerNorm(hidden_size, eps=1e-12)\n",
-    "        self.dropout = nn.Dropout(hidden_dropout_prob)\n",
+    "        self.dropout = nn.Dropout(dropout_prob)\n",
     "\n",
     "    def forward(self, input_ids, token_ids=None):\n",
     "        if token_ids is None:\n",
@@ -310,6 +304,61 @@
     "        embeddings = self.LayerNorm(embeddings)\n",
     "        embeddings = self.dropout(embeddings)\n",
     "        return embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53925969",
+   "metadata": {},
+   "source": [
+    "**Bert Model**: this class brings it all together.  In G-BERT, ontology embeddings are used so this class can be initialize with either the regular Bert Embeddings or the ontology embeddings based on the useGraph input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f61643bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BertModel(nn.Module):\n",
+    "    def __init__(self, vocab_size, hidden_size, dropout_prob, useGraph, all_conditions=None, all_drugs=None):\n",
+    "        super(BertModel, self).__init__()\n",
+    "        if useGraph:\n",
+    "            self.embedding = FuseEmbeddings(all_conditions, all_drugs, vocab_size)\n",
+    "        else:\n",
+    "            self.embedding = BertEmbeddings(vocab_size, hidden_size, dropout_prob)\n",
+    "\n",
+    "        self.transformer_blocks = nn.ModuleList([\n",
+    "            TransformerBlock(hidden_size, 300, dropout_prob), \n",
+    "            TransformerBlock(hidden_size, 300, dropout_prob)\n",
+    "        ])\n",
+    "        \n",
+    "        self.apply(self.init_bert_weights)\n",
+    "        \n",
+    "    def init_bert_weights(self, module):\n",
+    "        '''\n",
+    "        Taken from https://github.com/huggingface/transformers/blob/78b7debf56efb907c6af767882162050d4fbb294/src/transformers/modeling_utils.py#L1596\n",
+    "        '''\n",
+    "        if isinstance(module, (nn.Linear, nn.Embedding)):\n",
+    "            # Slightly different from the TF version which uses truncated_normal for initialization\n",
+    "            # cf https://github.com/pytorch/pytorch/pull/5617\n",
+    "            module.weight.data.normal_(mean=0.0, std=0.02)\n",
+    "        elif isinstance(module, LayerNorm):\n",
+    "            module.bias.data.zero_()\n",
+    "            module.weight.data.fill_(1.0)\n",
+    "        if isinstance(module, nn.Linear) and module.bias is not None:\n",
+    "            module.bias.data.zero_()\n",
+    "            \n",
+    "    def forward(self, input_ids, token_ids):\n",
+    "        mask = (input_ids > 1).unsqueeze(1).repeat(1, input_ids.size(1), 1).unsqueeze(1)\n",
+    "        \n",
+    "        x = self.embedding(input_ids, token_ids)\n",
+    "\n",
+    "        for transformer in self.transformer_blocks:\n",
+    "            x = transformer.forward(x, mask)\n",
+    "     \n",
+    "        return x, x[:, 0]"
    ]
   }
  ],
